Masters_work/towerslope/Exp/Exp_Rms_staterr/Dec_13_Results/Exp-L3_RMS-Staterror_coorPAr.txt
Script started on 2024-12-13 10:18:58-06:00 [TERM="xterm-256color" TTY="/dev/pts/3" COLUMNS="120" LINES="30"]
[?2004h]0;plewis@MSI: ~/Master_w/Masters_work/towerslope/codes[01;32mplewis@MSI[00m:[01;34m~/Master_w/Masters_work/towerslope/codes[00m$ root
[?2004l   ------------------------------------------------------------------
  | Welcome to ROOT 6.30/08                        https://root.cern |
  | (c) 1995-2024, The ROOT Team; conception: R. Brun, F. Rademakers |
  | Built for linuxx8664gcc on Jul 14 2024, 22:53:16                 |
  | From tags/v6-30-08@v6-30-08                                      |
  | With c++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0                   |
  | Try '.help'/'.?', '.demo', '.license', '.credits', '.quit'/'.q'  |
   ------------------------------------------------------------------

[0mroot [0] .q[D[DRun3[0m[38;5;83m[1m()[D[D[D[D[D[D[0mRun2()[D[D[D[D[D[DRun1()[D[D[D[D[D[D.L ExpoS_RMS_SErr.C 
[0mIn file included from input_line_8:1:
[1m/home/plewis/Master_w/Masters_work/towerslope/codes/ExpoS_RMS_SErr.C:497:6: [0m[0;1;31merror: [0m[1mredefinition of 'Mill_Mean_input'[0m
void Mill_Mean_input() {
[0;1;32m     ^
[0m[1m/home/plewis/Master_w/Masters_work/towerslope/codes/ExpoS_RMS_SErr.C:158:6: [0m[0;1;30mnote: [0mprevious definition is here[0m
void Mill_Mean_input() {
[0;1;32m     ^
[0m[0mroot [1] .q
[0m[?2004h]0;plewis@MSI: ~/Master_w/Masters_work/towerslope/codes[01;32mplewis@MSI[00m:[01;34m~/Master_w/Masters_work/towerslope/codes[00m$ root
[?2004l   ------------------------------------------------------------------
  | Welcome to ROOT 6.30/08                        https://root.cern |
  | (c) 1995-2024, The ROOT Team; conception: R. Brun, F. Rademakers |
  | Built for linuxx8664gcc on Jul 14 2024, 22:53:16                 |
  | From tags/v6-30-08@v6-30-08                                      |
  | With c++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0                   |
  | Try '.help'/'.?', '.demo', '.license', '.credits', '.quit'/'.q'  |
   ------------------------------------------------------------------

[0mroot [0] .q[D[D.L ExpoS_RMS_SErr.C 
[0m[0mroot [1] Run4[0m[38;5;83m[1m()
[0m****************************************
Minimizer is Minuit2 / Migrad
Chi2                      =     0.112769
NDf                       =           46
Edm                       =  1.74956e-25
NCalls                    =           32
p0                        =      2.25294   +/-   1.74062     
p1                        =     0.022944   +/-   0.0129458   
Info in <TCanvas::SaveAs>: ROOT file Expo-L3_RMS_vs_P1staterr_12-5_iteration.root has been created
Pearson Correlation Coefficient (r) for dataset 1: 0.187456
Population Correlation Coefficient (rho): 0.187456
Spearman Rank Correlation Coefficient (rho): 0.44892
[0mroot [2] .q
[0m[?2004h]0;plewis@MSI: ~/Master_w/Masters_work/towerslope/codes[01;32mplewis@MSI[00m:[01;34m~/Master_w/Masters_work/towerslope/codes[00m$ exit
[?2004lexit

Script done on 2024-12-13 10:20:54-06:00 [COMMAND_EXIT_CODE="0"]
